# did-solana

./: .gitignore  .gitignore.swo  CHANGELOG.md  README.md  main.tf
cli/: add-authentication.js  index.js  package.json
frontend/: README.md  main.tf  package.json
frontend/public/: index.html
frontend/src/: config.js  global-styles.js  index.js  theme.js
frontend/src/components/: AddAuthentication.js  AddService.css  AddService.js  Container.js  CreateDid.js  CreateService.js  Header.js  Home.css  Home.js  Info.js  UserMenu.js
frontend/src/utils/: add-authentication.js  add-service.js  create-service.js  index.js
program/: Cargo.toml
program/identifier/: README.md
program/identifier/cli/: add-authentication.js  add-service.js  index.js
program/identifier/src/: processor.rs
program/license-service/: Cargo.toml  README.md
program/license-service/cli/: index.js  package.json
program/license-service/src/: processor.rs
program/src/: .lib.rs.swo  error.rs  processor.rs  state.rs
