[package]
name = "did-solana"
version = "0.1.0"
authors = ["PaddyMc <paddymchale@hotmail.com>"]
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.5.7"

[dev-dependencies]
solana-program-test = "1.5.6"
solana-sdk = "1.5.6"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

