[package]
name = "did-solana"
version = "0.1.0"
authors = ["PaddyMc <paddymchale@hotmail.com>"]
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
arrayref = "0.3.6"
enum_dispatch = "0.3.4"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.1"
solana-program = "1.5.7"
arbitrary = { version = "0.4", features = ["derive"], optional = true }

[dev-dependencies]
solana-program-test = "1.5.6"
solana-sdk = "1.5.6"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

